# codec-beam

./: .gitignore  .travis.yml  LICENSE  README.md  codec-beam.cabal  elm-package.json  stack.yaml
example/: ByteStringConversion.hs  Kaleidoscope.hs  README.md  example.k  kaleidoscope.cabal
src/: Bytes.elm  Main.elm
src/Codec/: Beam.elm  Beam.hs
src/Codec/Beam/: Bifs.hs  Builder.hs  Bytes.hs  Encoding.elm  Encoding.hs  Function.hs  Genop.hs  Instructions.hs  Internal.hs  Module.hs
src/Codec/Beam/Genop/: Internal.hs
src/Codec/Beam/Internal/: Assembler.hs  Bytes.hs  Syntax.hs  Table.hs  Types.hs
src/Data/: Table.hs
test/: BShow.hs  ByteStringConversion.hs  Eunit.hs  Main.hs  runner.erl
test/Test/: Atoms.hs
