Name: codec-beam
Version: 0.1.0
Synopsis: BEAM (Erlang Virtual Machine) byte code assembler
Description: See README at <https://github.com/hkgumbs/codec-beam#readme>.
Maintainer: h.kofigumbs@gmail.com
Homepage: https://github.com/hkgumbs/codec-beam#readme
Bug-Reports: https://github.com/hkgumbs/codec-beam/issues

License: BSD3
License-File: LICENSE

Category: Codec

Cabal-Version: >=1.9
Build-Type: Simple

Source-Repository head
    type:     git
    location: git://github.com/hkgumbs/codec-beam.git

Library
    extensions: OverloadedStrings
    hs-source-dirs: src
    exposed-modules: Codec.Beam
                     Codec.Beam.Bifs
                     Codec.Beam.Instructions
    other-modules: Codec.Beam.Internal.Syntax
                   Codec.Beam.Internal.Table
    build-depends: base,
                   bytestring,
                   containers,
                   zlib,
                   text

Test-Suite codec-beam-tests
    extensions: OverloadedStrings
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Eunit
    build-depends: codec-beam,
                   base,
                   bytestring,
                   filepath,
                   process,
                   text
