Name: codec-beam
Category: Language, Codec
Version: 0.2.0
Maintainer: h.kofigumbs@gmail.com
Synopsis: Erlang VM byte code assembler
Description: Erlang VM byte code assembler.

Extra-Source-Files:
  README.md
  test/.eunit/.gitkeep

License: BSD3
License-File: LICENSE

Cabal-Version: >=1.9
Build-Type: Simple

Bug-Reports: https://github.com/hkgumbs/codec-beam/issues
Homepage: https://github.com/hkgumbs/codec-beam#readme
Source-Repository head
    type:     git
    location: git://github.com/hkgumbs/codec-beam.git

Library
    extensions: OverloadedStrings
    hs-source-dirs: src
    exposed-modules: Codec.Beam
                     Codec.Beam.Bifs
                     Codec.Beam.Instructions
    other-modules: Codec.Beam.Internal.Syntax
                   Codec.Beam.Internal.Table
    build-depends: base >=4.8 && <5,
                   bytestring >=0.10.6,
                   containers >=0.5.6.2,
                   zlib >=0.6.1.1,
                   text >=1.2.2

Test-Suite codec-beam-tests
    extensions: OverloadedStrings
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Eunit
    build-depends: codec-beam,
                   base >=4.8 && <5,
                   bytestring,
                   filepath,
                   process,
                   text
