Name: kaleidoscope
Version: 0.1.0

Cabal-Version: >=1.9
Build-Type: Simple

Executable kaleidoscope
    ghc-options: -W -Werror
    extensions: OverloadedStrings
    hs-source-dirs: .
    main-is: Kaleidoscope.hs
    build-depends: codec-beam,
                   base,
                   bytestring,
                   containers,
                   filepath,
                   mtl,
                   parsec,
                   text,
                   unix
